css removed z-index from info textareas to prevent it overlapping the menu in certain versions of Mozilla

--- a/browser/css/dark.css
+++ b/browser/css/dark.css
@@ -1669,7 +1669,6 @@ table.log textarea {
   -webkit-transition: max-height 0.8s ease-out;
   -moz-transition: max-height 0.8s ease-out;
   transition: max-height 0.8s ease-out;
-  z-index: 1;
 }
 .info_container:hover {
   max-height: 400px;
