--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -1902,7 +1902,6 @@ flex-grow : 1;
     -webkit-transition: max-height 0.8s ease-out;
     -moz-transition: max-height 0.8s ease-out;
     transition: max-height 0.8s ease-out;
-    z-index: 1;
 }
 
 .info_container:hover {
